--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           <div class="project">
             <h3>BojuBoju</h3>
             <p class="project__description">
-              BojuBoju is an anonymous interactive website to send dares to your friends, compliment them and send them other stuffs without them knowing it's from you.
-            </p>
+        	BojuBoju is an anonymous messaging app that allows users to send messages and images to their friends without revealing their identity. Users can create a profile on the app, and then share a unique link with their friends. When a friend clicks on the link, they are taken to a page where they can send anonymous messages and images to the user&#039;s profile.     
+	  </p>
             <ul class="project__stack">
               <li class="project__stack-item">VueJS</li>
               <li class="project__stack-item">JavaScript</li>
@@ -114,6 +114,14 @@
               target="_blank"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+	   <a
+              href="https://bojuboju.xyz/"
+              aria-label="live preview"
+              class="link link--icon"
+              target="_blank"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
        
           </div>
@@ -137,7 +145,7 @@
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://github.com/youngyusuff6/Form-Validation-With-Instant-Feedbacks/blob/master/app.js"
+              href="https://instant-feedback.netlify.app/"
               aria-label="live preview"
               class="link link--icon"
               target="_blank"
@@ -163,7 +171,14 @@
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-      
+      		 <a
+              href="https://carousel-testing.netlify.app/"
+              aria-label="live preview"
+              class="link link--icon"
+              target="_blank"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
           </div>
         </div>
       </section>
