--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </p>
 
       <div class="about__contact center">
-        <a href="https://drive.google.com/file/d/125aII3MGynxtO8EUyRHKoZ-rzlBVlfjY/view" target="_blank">
+        <a href="https://drive.google.com/file/d/125aII3MGynxtO8EUyRHKoZ-rzlBVlfjY/view?usp=drive_link" target="_blank">
           <span class="btn btn--outline">Resume</span>
         </a>
 
