--- a/index.html
+++ b/index.html
@@ -55,12 +55,8 @@
       <h1>Hi, I am <span class="about__name">Yusuff AbdulHameed<span style="color: red;">.</span></span></h1>
       <h2 class="about__role">A Web Developer</h2>
       <p class="about__desc">
-        Self driven software engineer with a knack for clever tech solutions, seeking to make an impact by solving real
-        world problems through technology.
-        I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript; dabbling with PHP and
-        Laravel; and inhaling a wide variety of potentially useless information through a few hundred RSS feeds. I build
-        websites that delight and inform. I do it well😋😎.
-      </p>
+Self-driven backend developer with a passion for crafting innovative tech solutions to address real-world challenges through technology. I dedicate my time to mastering PHP and Laravel, alongside experimenting with HTML, CSS, and JavaScript. My goal is to create robust and efficient backend systems that empower businesses and enhance user experiences. I thrive on building reliable and scalable web applications that exceed expectations. Let's create something remarkable together! 😋😎
+	</p>
 
       <div class="about__contact center">
         <a href="https://drive.google.com/file/d/125aII3MGynxtO8EUyRHKoZ-rzlBVlfjY/view?usp=drive_link" target="_blank">
