--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </p>
 
       <div class="about__contact center">
-        <a href="https://drive.google.com/file/d/1Lie790cPCXkEm38bPoQLl-VFhYfYsTUW/view?usp=sharing" target="_blank">
+        <a href="https://drive.google.com/file/d/125aII3MGynxtO8EUyRHKoZ-rzlBVlfjY/view?usp=drive_link" target="_blank">
           <span class="btn btn--outline">Resume</span>
         </a>
 
@@ -71,7 +71,7 @@
           <i aria-hidden="true" class="fab fa-github"></i>
         </a>
 
-        <a href="https://linkedin.com/in/abdulhameed-yusuff-7b8966219" aria-label="linkedin" class="link link--icon"
+        <a href="https://linkedin.com/in/youngyusuff6" aria-label="linkedin" class="link link--icon"
           target="_blank">
           <i aria-hidden="true" class="fab fa-linkedin"></i>
         </a>
@@ -182,6 +182,26 @@
             <i aria-hidden="true" class="fab fa-github"></i>
           </a>
         </div>
+
+<div class="project">
+          <h3>Task Management API</h3>
+          <p class="project__description">
+            The Task Management API is a robust solution for managing task submissions from customers. With this API, users can effortlessly submit tasks, complete with titles, descriptions, and optional categories. The API employs a credit system, where each task submission requires one credit. Customers have the flexibility to purchase credits in any desired quantity, ensuring seamless access to the task submission process.
+          </p>
+          <ul class="project__stack">
+            <li class="project__stack-item">PHP</li>
+	    <li class="project__stack-item">Laravel</li>
+	    <li class="project__stack-item">MySQL</li>
+            <li class="project__stack-item">Postman</li>
+          </ul>
+
+          <a href="https://github.com/youngyusuff6/task_api" aria-label="source code" class="link link--icon"
+            target="_blank">
+            <i aria-hidden="true" class="fab fa-github"></i>
+          </a>
+        </div>
+
+
 
         <div class="project">
           <h3>KYC App</h3>
@@ -303,7 +323,7 @@
         </a>
       </div>
       <div class="mt-4">
-        <a href="https://linkedin.com/in/abdulhameed-yusuff-7b8966219" aria-label="linkedin" class="link link--icon"
+        <a href="https://linkedin.com/in/youngyusuff6" aria-label="linkedin" class="link link--icon"
           target="_blank">
           Linkedin <i aria-hidden="true" class="fab fa-linkedin"></i>
         </a>
@@ -314,7 +334,7 @@
         </a>
       </div>
       <div class="mt-4">
-        <a href="https://twitter.com/youngyusuff06" aria-label="twitter" class="link link--icon" target="_blank">
+        <a href="https://twitter.com/youngyusuff6" aria-label="twitter" class="link link--icon" target="_blank">
           Twitter <i aria-hidden="true" class="fab fa-twitter"></i>
         </a>
       </div>
