--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@ Self-driven backend developer with a passion for crafting innovative tech soluti
         <li class="skills__list-item btn btn--plain">Node.js</li>
         <li class="skills__list-item btn btn--plain">Git</li>
         <li class="skills__list-item btn btn--plain">Github</li>
+	<li class="skills__list-item btn btn--plain">Postman</li>
         <li class="skills__list-item btn btn--plain">Material UI</li>
         <li class="skills__list-item btn btn--plain">Ant Design</li>
       </ul>
