--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- About -->
     <div class="about center">
       <h1>Hi, I am <span class="about__name">Yusuff AbdulHameed<span style="color: red;">.</span></span></h1>
-      <h2 class="about__role">A Web Developer</h2>
+      <h2 class="about__role">A Backend Developer</h2>
       <p class="about__desc">
 Self-driven backend developer with a passion for crafting innovative tech solutions to address real-world challenges through technology. I dedicate my time to mastering PHP and Laravel, alongside experimenting with HTML, CSS, and JavaScript. My goal is to create robust and efficient backend systems that empower businesses and enhance user experiences. I thrive on building reliable and scalable web applications that exceed expectations. Let's create something remarkable together! 😋😎
 	</p>
