--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <h2 class="section__title">My Projects <i class="fa-solid fa-bars-progress" id="btn-theme"></i></h2>
 
       <div class="projects__grid">
-     
+
         <div class="project">
           <h3>BojuBoju</h3>
           <p class="project__description">
@@ -111,13 +111,15 @@
           </a>
 
         </div>
-  
+
         <div class="project">
           <h3>VMS</h3>
           <p class="project__description">
             An ML powered visitors management system to provide navigation to visitors and provide a hitchfree visit.
-            It is a web application designed to manage visitors' registration and validation for a residential community. The app provides a platform for security personnel and residents to handle visitor registration, track visitor data, and validate visitor IDs.
-        
+            It is a web application designed to manage visitors' registration and validation for a residential
+            community. The app provides a platform for security personnel and residents to handle visitor registration,
+            track visitor data, and validate visitor IDs.
+
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">VueJS</li>
@@ -137,8 +139,10 @@
 
         <div class="project">
           <h3>Task Manager</h3>
-          <p class="project__description">           
-          This is a simple Laravel web application for task management. Users can create, edit, delete tasks, and reorder them using drag and drop functionality in the browser. Additionally, tasks can be associated with projects, and users can filter tasks by selecting a project from a dropdown.
+          <p class="project__description">
+            This is a simple Laravel web application for task management. Users can create, edit, delete tasks, and
+            reorder them using drag and drop functionality in the browser. Additionally, tasks can be associated with
+            projects, and users can filter tasks by selecting a project from a dropdown.
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">HTML</li>
@@ -149,34 +153,33 @@
             <li class="project__stack-item">MySQL</li>
           </ul>
 
-          <a href="https://github.com/youngyusuff6/task-management.git" aria-label="source code"
-            class="link link--icon" target="_blank">
+          <a href="https://github.com/youngyusuff6/task-management.git" aria-label="source code" class="link link--icon"
+            target="_blank">
             <i aria-hidden="true" class="fab fa-github"></i>
           </a>
-        </div>
         </div>
 
         <div class="project">
           <h3>KYC App</h3>
-          <p class="project__description">           
+          <p class="project__description">
             This is a simple KYC (Know Your Customer) Record Management System implemented in PHP.
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">HTML</li>
-            <li class="project__stack-item">Bootstrap</li>>
+            <li class="project__stack-item">Bootstrap</li>
             <li class="project__stack-item">PHP</li>
             <li class="project__stack-item">MySQL</li>
           </ul>
 
-          <a href="https://github.com/youngyusuff6/kycapp" aria-label="source code"
-            class="link link--icon" target="_blank">
+          <a href="https://github.com/youngyusuff6/kycapp" aria-label="source code" class="link link--icon"
+            target="_blank">
             <i aria-hidden="true" class="fab fa-github"></i>
           </a>
         </div>
 
         <div class="project">
           <h3>Blog App</h3>
-          <p class="project__description">           
+          <p class="project__description">
             This is a simple blog app implemented using Node.js and Express.js.
           </p>
           <ul class="project__stack">
@@ -188,8 +191,8 @@
             <li class="project__stack-item">MongoDB</li>
           </ul>
 
-          <a href="https://github.com/youngyusuff6/node_blog" aria-label="source code"
-            class="link link--icon" target="_blank">
+          <a href="https://github.com/youngyusuff6/node_blog" aria-label="source code" class="link link--icon"
+            target="_blank">
             <i aria-hidden="true" class="fab fa-github"></i>
           </a>
         </div>
