--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
           <h3>KYC App</h3>
           <p class="project__description">
             This is a simple KYC (Know Your Customer) Record Management System implemented in PHP.
+            <ul>
+                <p><strong>Features</strong></p>
+               <li>- User authentication (login/logout)</li>
+               <li>- Edit, delete user KYC records</li>
+               <li>- File upload for user KYC documents</li>
+               <li>- Secure authentication using JWT tokens</li>
+            </ul>
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">HTML</li>
@@ -180,11 +187,11 @@
         <div class="project">
           <h3>Blog App</h3>
           <p class="project__description">
-            This is a simple blog app implemented using Node.js and Express.js.
+            This is a simple blog app implemented using Node.js and Express.js. This simple blog application allows you to create and manage your blog posts using Node.js and MongoDB.
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">HTML</li>
-            <li class="project__stack-item">CSS</li>>
+            <li class="project__stack-item">CSS</li>
             <li class="project__stack-item">JS</li>
             <li class="project__stack-item">Node.js</li>
             <li class="project__stack-item">Express.js</li>
