--- a/index.html
+++ b/index.html
@@ -85,6 +85,30 @@
       <div class="projects__grid">
 
         <div class="project">
+          <h3>UniSkills</h3>
+          <p class="project__description">
+            Uniskills is a revolutionary platform that connects students with businesses in order to solve the skills
+            gap. It's a win-win. Students can find rewarding work while gaining the skills they need to succeed. And,
+            businesses can find qualified workers who are eager and ready to learn.
+          </p>
+          <ul class="project__stack">
+            <li class="project__stack-item">PHP</li>
+            <li class="project__stack-item">Laravel</li>
+            <li class="project__stack-item">JavaScript</li>
+            <li class="project__stack-item">MySQL</li>
+            <li class="project__stack-item">jQuery</li>
+            <li class="project__stack-item">Blade</li>
+            <li class="project__stack-item">CSS</li>
+            <li class="project__stack-item">Bootstrap</li>
+          </ul>
+
+          <a href="https://uniskills.net/" aria-label="live preview" class="link link--icon" target="_blank">
+            <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+          </a>
+
+        </div>
+
+        <div class="project">
           <h3>BojuBoju</h3>
           <p class="project__description">
             BojuBoju is an anonymous messaging app that allows users to send messages and images to their friends
@@ -164,11 +188,11 @@
           <p class="project__description">
             This is a simple KYC (Know Your Customer) Record Management System implemented in PHP.
             <ul>
-                <p><strong>Features</strong></p>
-               <li>- User authentication (login/logout)</li>
-               <li>- Edit, delete user KYC records</li>
-               <li>- File upload for user KYC documents</li>
-               <li>- Secure authentication using JWT tokens</li>
+              <p><strong>Features</strong></p>
+              <li>- User authentication (login/logout)</li>
+              <li>- Edit, delete user KYC records</li>
+              <li>- File upload for user KYC documents</li>
+              <li>- Secure authentication using JWT tokens</li>
             </ul>
           </p>
           <ul class="project__stack">
@@ -187,7 +211,8 @@
         <div class="project">
           <h3>Blog App</h3>
           <p class="project__description">
-            This is a simple blog app implemented using Node.js and Express.js. This simple blog application allows you to create and manage your blog posts using Node.js and MongoDB.
+            This is a simple blog app implemented using Node.js and Express.js. This simple blog application allows you
+            to create and manage your blog posts using Node.js and MongoDB.
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">HTML</li>
