--- a/index.html
+++ b/index.html
@@ -197,6 +197,24 @@ Self-driven backend developer with a passion for crafting innovative tech soluti
           </a>
         </div>
 
+        <div class="project">
+          <h3>Todo App</h3>
+          <p class="project__description">
+            This is a simple Todo List application built using the Laravel framework with Livewire for dynamic, real-time user interfaces. This application allows users to create, edit, delete, and toggle the completion status of todo items. The interface includes flash messages that provide feedback to the user about their actions.
+          </p>
+          <ul class="project__stack">
+            <li class="project__stack-item">Laravel</li>
+            <li class="project__stack-item">Livewire</li>
+            <li class="project__stack-item">Tailwind CSS</li>
+            <li class="project__stack-item">PHP</li>
+            <li class="project__stack-item">MySQL</li>
+          </ul>
+
+          <a href="https://github.com/youngyusuff6/todo-app.git" aria-label="source code" class="link link--icon"
+            target="_blank">
+            <i aria-hidden="true" class="fab fa-github"></i>
+          </a>
+        </div>
 
 
         <div class="project">
@@ -300,12 +318,15 @@ Self-driven backend developer with a passion for crafting innovative tech soluti
         <li class="skills__list-item btn btn--plain">MySQL</li>
         <li class="skills__list-item btn btn--plain">PHP</li>
         <li class="skills__list-item btn btn--plain">Laravel</li>
+        <li class="skills__list-item btn btn--plain">Livewire</li>
         <li class="skills__list-item btn btn--plain">MongoDB</li>
         <li class="skills__list-item btn btn--plain">Express.js</li>
         <li class="skills__list-item btn btn--plain">Node.js</li>
         <li class="skills__list-item btn btn--plain">Git</li>
         <li class="skills__list-item btn btn--plain">Github</li>
 	<li class="skills__list-item btn btn--plain">Postman</li>
+        <li class="skills__list-item btn btn--plain">Bootstrap</li>
+        <li class="skills__list-item btn btn--plain">Tailwind</li>
         <li class="skills__list-item btn btn--plain">Material UI</li>
         <li class="skills__list-item btn btn--plain">Ant Design</li>
       </ul>
