--- a/index.html
+++ b/index.html
@@ -132,6 +132,31 @@ Self-driven backend developer with a passion for crafting innovative tech soluti
 
         </div>
 
+	        <div class="project">
+          <h3>Polls</h3>
+          <p class="project__description">
+            This Laravel application provides functionalities to view and manage election results for polling units under various local government areas (LGAs) within Delta State. 
+          </p>
+          <ul class="project__stack">
+	    <li class="project__stack-item">MySQL</li>
+            <li class="project__stack-item">PHP</li>
+            <li class="project__stack-item">JavaScript</li>
+            <li class="project__stack-item">Blade</li>
+            <li class="project__stack-item">CSS</li>
+            <li class="project__stack-item">Bootstrap</li>
+          </ul>
+
+          <a href="https://github.com/youngyusuff6/polls.git" aria-label="source code" class="link link--icon"
+            target="_blank">
+            <i aria-hidden="true" class="fab fa-github"></i>
+          </a>
+          <a href="https://bincomtests.000webhostapp.com/" aria-label="live preview" class="link link--icon" target="_blank">
+            <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+          </a>
+
+        </div>
+
+
         <div class="project">
           <h3>VMS</h3>
           <p class="project__description">
